<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="co.couchrail.couchrail.Login"
    android:background="@drawable/bg">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="240dp"
        android:hint="@string/login_username"
        android:textColor="#FFF"
        android:textSize="15dp"
        android:backgroundTint="@color/background_material_light"
        android:alpha="0.3" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="15dp"
        android:id="@+id/login_password"
        android:layout_alignTop="@+id/login_username"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="60dp"
        android:hint="@string/login_PASSWORD"
        android:textColor="#FFF"
        android:backgroundTint="@color/background_material_light"
        android:alpha="0.3"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signin"
        android:id="@+id/login_signin"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/redround"
        android:clickable="true"
        android:textColor="#FFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signUp"
        android:id="@+id/login_signUp"
        android:layout_below="@+id/login_signin"
        android:layout_alignRight="@+id/login_password"
        android:layout_alignEnd="@+id/login_password"
        android:background="@null"
        android:textColor="#FFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_resetPass"
        android:id="@+id/login_resetPass"
        android:layout_below="@+id/login_signUp"
        android:layout_alignRight="@+id/login_signUp"
        android:layout_alignEnd="@+id/login_signUp"
        android:background="@null"
        android:textColor="#FFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_dontAccount"
        android:id="@+id/login_dontHaveAccount"
        android:layout_alignBaseline="@id/login_signUp"
        android:layout_alignParentLeft="true"
        android:textColor="#FFF"
        android:textSize="15dp"
        android:alpha="0.4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgotPass"
        android:id="@+id/login_forgotPass"
        android:layout_marginTop="15dp"
        android:layout_alignBaseline="@+id/login_resetPass"
        android:layout_alignLeft="@+id/login_dontHaveAccount"
        android:alpha="0.4"
        android:textSize="15dp"
        android:textColor="#FFF" />
</RelativeLayout>
