<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.couchrail.couchrail.Signup"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_name"
        android:id="@+id/signup_nameT"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:textColor="#FFF"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_name"
        android:layout_below="@+id/signup_nameT"
        android:backgroundTint="@color/background_material_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_username"
        android:id="@+id/signup_usernameT"
        android:layout_below="@+id/signup_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:textColor="#FFF"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_username"
        android:layout_below="@+id/signup_usernameT"
        android:backgroundTint="@color/background_material_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_email"
        android:id="@+id/signup_emailT"
        android:layout_below="@+id/signup_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:textColor="#FFF"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/signup_email"
        android:layout_below="@+id/signup_emailT"
        android:backgroundTint="@color/background_material_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_sex"
        android:id="@+id/signup_sexT"
        android:layout_below="@+id/signup_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:textColor="#FFF"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_sex"
        android:layout_below="@+id/signup_sexT"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_password"
        android:id="@+id/signup_passwordT"
        android:layout_below="@+id/signup_sex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:textColor="#FFF"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/signup_password"
        android:layout_below="@+id/signup_passwordT"
        android:backgroundTint="@color/background_material_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signup_password"
        android:id="@+id/signup_cpasswordT"
        android:layout_below="@+id/signup_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.7"
        android:textColor="#FFF"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/signup_cpassword"
        android:layout_below="@+id/signup_cpasswordT"
        android:backgroundTint="@color/background_material_light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signUp"
        android:id="@+id/signup_signup"
        android:layout_below="@+id/signup_cpassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/redround"
        android:clickable="true"
        android:textColor="#FFF" />

</RelativeLayout>
